# esp32-fuota

./: .gitignore  README.md  fuota_partitions.csv
.github/: FUNDING.yml
components/conn_wifi_b/: CMakeLists.txt  conn_wifi_b.c
components/conn_wifi_b/include/: conn_wifi_b.h
components/fuota_b/: CMakeLists.txt  fuota_b.c
components/fuota_b/include/: fuota_b.h
components/scan_wifi_b/: CMakeLists.txt  scan_wifi_b.c
components/scan_wifi_b/include/: scan_wifi_b.h
doc/: conn_wifi_b_fsm.odg
main/: CMakeLists.txt  Kconfig  main.c
